--- a/makefile.flap
+++ b/makefile.flap
@@ -26,38 +26,38 @@ $(LIB): $(MKDIRS) $(DOBJ)$(LIB).o
 
 #compiling rules
 $(DOBJ)flap_command_line_interface_t.o: src/FLAP/flap_command_line_interface_t.F90 \
-	$(DOBJ)face.o \
+	$(DEXE)libface.a \
 	$(DOBJ)flap_command_line_argument_t.o \
 	$(DOBJ)flap_command_line_arguments_group_t.o \
 	$(DOBJ)flap_object_t.o \
 	$(DOBJ)flap_utils_m.o \
-	$(DOBJ)penf.o
+	$(DEXE)libpenf.a
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)flap_command_line_arguments_group_t.o: src/FLAP/flap_command_line_arguments_group_t.f90 \
-	$(DOBJ)face.o \
+	$(DEXE)libface.a \
 	$(DOBJ)flap_command_line_argument_t.o \
 	$(DOBJ)flap_object_t.o \
-	$(DOBJ)penf.o
+	$(DEXE)libpenf.a
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)flap_utils_m.o: src/FLAP/flap_utils_m.f90 \
-	$(DOBJ)penf.o
+	$(DEXE)libpenf.a
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)flap_command_line_argument_t.o: src/FLAP/flap_command_line_argument_t.F90 \
-	$(DOBJ)face.o \
+	$(DEXE)libface.a \
 	$(DOBJ)flap_object_t.o \
 	$(DOBJ)flap_utils_m.o \
-	$(DOBJ)penf.o
+	$(DEXE)libpenf.a
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)flap_object_t.o: src/FLAP/flap_object_t.f90 \
-	$(DOBJ)penf.o
+	$(DEXE)libpenf.a
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
@@ -68,31 +68,13 @@ $(DOBJ)flap.o: src/FLAP/flap.f90 \
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
-$(DOBJ)face.o: src/FACE/face.F90
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
+.NOTPARALLEL: $(DEXE)libface.a $(DEXE)libpenf.a
 
-$(DOBJ)penf.o: src/PENF/penf.F90 \
-	$(DOBJ)penf_global_parameters_variables.o \
-	$(DOBJ)penf_b_size.o \
-	$(DOBJ)penf_stringify.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
+$(DEXE)libface.a:
+	@$(MAKE) -f makefile.face
 
-$(DOBJ)penf_global_parameters_variables.o: src/PENF/penf_global_parameters_variables.F90
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
-
-$(DOBJ)penf_b_size.o: src/PENF/penf_b_size.F90 \
-	$(DOBJ)penf_global_parameters_variables.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
-
-$(DOBJ)penf_stringify.o: src/PENF/penf_stringify.F90 \
-	$(DOBJ)penf_b_size.o \
-	$(DOBJ)penf_global_parameters_variables.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
+$(DEXE)libpenf.a:
+	@$(MAKE) -f makefile.penf
 
 #phony auxiliary rules
 .PHONY : $(MKDIRS)
