--- a/makefile.vtkfortran
+++ b/makefile.vtkfortran
@@ -33,54 +33,54 @@ $(DOBJ)vtkfortran.o: src/VTKFortran/vtk_fortran.f90 \
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)vtk_fortran_vtm_file.o: src/VTKFortran/vtk_fortran_vtm_file.F90 \
-	$(DOBJ)befor64.o \
-	$(DOBJ)penf.o \
+	$(DEXE)libbefor64.a \
+	$(DEXE)libpenf.a \
 	$(DOBJ)vtk_fortran_vtk_file_xml_writer_abstract.o \
 	$(DOBJ)vtk_fortran_vtk_file_xml_writer_ascii_local.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)vtk_fortran_vtk_file_xml_writer_ascii_local.o: src/VTKFortran/vtk_fortran_vtk_file_xml_writer_ascii_local.f90 \
-	$(DOBJ)penf.o \
-	$(DOBJ)stringifor.o \
+	$(DEXE)libpenf.a \
+	$(DEXE)libstringifor.a \
 	$(DOBJ)vtk_fortran_dataarray_encoder.o \
 	$(DOBJ)vtk_fortran_vtk_file_xml_writer_abstract.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)vtk_fortran_dataarray_encoder.o: src/VTKFortran/vtk_fortran_dataarray_encoder.f90 \
-	$(DOBJ)befor64.o \
-	$(DOBJ)penf.o
+	$(DEXE)libbefor64.a \
+	$(DEXE)libpenf.a
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)vtk_fortran_pvtk_file.o: src/VTKFortran/vtk_fortran_pvtk_file.f90 \
-	$(DOBJ)befor64.o \
-	$(DOBJ)penf.o \
+	$(DEXE)libbefor64.a \
+	$(DEXE)libpenf.a \
 	$(DOBJ)vtk_fortran_vtk_file_xml_writer_abstract.o \
 	$(DOBJ)vtk_fortran_vtk_file_xml_writer_ascii_local.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)vtk_fortran_vtk_file_xml_writer_binary_local.o: src/VTKFortran/vtk_fortran_vtk_file_xml_writer_binary_local.f90 \
-	$(DOBJ)penf.o \
-	$(DOBJ)stringifor.o \
+	$(DEXE)libpenf.a \
+	$(DEXE)libstringifor.a \
 	$(DOBJ)vtk_fortran_dataarray_encoder.o \
 	$(DOBJ)vtk_fortran_vtk_file_xml_writer_abstract.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)vtk_fortran_vtk_file_xml_writer_abstract.o: src/VTKFortran/vtk_fortran_vtk_file_xml_writer_abstract.f90 \
-	$(DOBJ)foxy.o \
-	$(DOBJ)penf.o \
-	$(DOBJ)stringifor.o \
+	$(DEXE)libfoxy.a \
+	$(DEXE)libpenf.a \
+	$(DEXE)libstringifor.a \
 	$(DOBJ)vtk_fortran_parameters.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)vtk_fortran_vtk_file_xml_writer_appended.o: src/VTKFortran/vtk_fortran_vtk_file_xml_writer_appended.f90 \
-	$(DOBJ)penf.o \
-	$(DOBJ)stringifor.o \
+	$(DEXE)libpenf.a \
+	$(DEXE)libstringifor.a \
 	$(DOBJ)vtk_fortran_dataarray_encoder.o \
 	$(DOBJ)vtk_fortran_parameters.o \
 	$(DOBJ)vtk_fortran_vtk_file_xml_writer_abstract.o
@@ -88,9 +88,9 @@ $(DOBJ)vtk_fortran_vtk_file_xml_writer_appended.o: src/VTKFortran/vtk_fortran_vt
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)vtk_fortran_vtk_file.o: src/VTKFortran/vtk_fortran_vtk_file.f90 \
-	$(DOBJ)befor64.o \
-	$(DOBJ)penf.o \
-	$(DOBJ)stringifor.o \
+	$(DEXE)libbefor64.a \
+	$(DEXE)libpenf.a \
+	$(DEXE)libstringifor.a \
 	$(DOBJ)vtk_fortran_vtk_file_xml_writer_abstract.o \
 	$(DOBJ)vtk_fortran_vtk_file_xml_writer_appended.o \
 	$(DOBJ)vtk_fortran_vtk_file_xml_writer_ascii_local.o \
@@ -99,73 +99,23 @@ $(DOBJ)vtk_fortran_vtk_file.o: src/VTKFortran/vtk_fortran_vtk_file.f90 \
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)vtk_fortran_parameters.o: src/VTKFortran/vtk_fortran_parameters.f90 \
-	$(DOBJ)penf.o
+	$(DEXE)libpenf.a
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
-$(DOBJ)penf.o: src/PENF/penf.F90 \
-	$(DOBJ)penf_global_parameters_variables.o \
-	$(DOBJ)penf_b_size.o \
-	$(DOBJ)penf_stringify.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
+.NOTPARALLEL: $(DEXE)libbefor64.a $(DEXE)libfoxy.a $(DEXE)libpenf.a $(DEXE)libstringifor.a
 
-$(DOBJ)penf_global_parameters_variables.o: src/PENF/penf_global_parameters_variables.F90
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
+$(DEXE)libbefor64.a:
+	@$(MAKE) -f makefile.befor64
 
-$(DOBJ)penf_b_size.o: src/PENF/penf_b_size.F90 \
-	$(DOBJ)penf_global_parameters_variables.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
+$(DEXE)libfoxy.a:
+	@$(MAKE) -f makefile.foxy
 
-$(DOBJ)penf_stringify.o: src/PENF/penf_stringify.F90 \
-	$(DOBJ)penf_b_size.o \
-	$(DOBJ)penf_global_parameters_variables.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
+$(DEXE)libpenf.a:
+	@$(MAKE) -f makefile.penf
 
-$(DOBJ)befor64_pack_data_m.o: src/BeFoR64/befor64_pack_data_m.F90 \
-	$(DOBJ)penf.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
-
-$(DOBJ)befor64.o: src/BeFoR64/befor64.F90 \
-	$(DOBJ)penf.o \
-	$(DOBJ)befor64_pack_data_m.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
-
-$(DOBJ)stringifor.o: src/StringiFor/stringifor.F90 \
-	$(DOBJ)penf.o \
-	$(DOBJ)stringifor_string_t.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
-
-$(DOBJ)stringifor_string_t.o: src/StringiFor/stringifor_string_t.F90 \
-	$(DOBJ)befor64.o \
-	$(DOBJ)penf.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
-
-$(DOBJ)foxy_xml_file.o: src/FoXy/foxy_xml_file.f90 \
-	$(DOBJ)foxy_xml_tag.o \
-	$(DOBJ)penf.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
-
-$(DOBJ)foxy_xml_tag.o: src/FoXy/foxy_xml_tag.f90 \
-	$(DOBJ)penf.o \
-	$(DOBJ)stringifor.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
-
-$(DOBJ)foxy.o: src/FoXy/foxy.f90 \
-	$(DOBJ)foxy_xml_file.o \
-	$(DOBJ)foxy_xml_tag.o \
-	$(DOBJ)penf.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
+$(DEXE)libstringifor.a:
+	@$(MAKE) -f makefile.stringifor
 
 #phony auxiliary rules
 .PHONY : $(MKDIRS)
