--- a/makefile.wenoof
+++ b/makefile.wenoof
@@ -26,37 +26,37 @@ $(LIB): $(MKDIRS) $(DOBJ)$(LIB).o
 
 #compiling rules
 $(DOBJ)wenoof.o: src/WenOOF/wenoof.F90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_interpolator_object.o \
 	$(DOBJ)wenoof_objects_factory.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_base_object.o: src/WenOOF/abstract_objects/wenoof_base_object.f90 \
-	$(DOBJ)penf.o
+	$(DEXE)libpenf.a
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_beta_object.o: src/WenOOF/abstract_objects/wenoof_beta_object.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_base_object.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_alpha_object.o: src/WenOOF/abstract_objects/wenoof_alpha_object.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_base_object.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_weights_object.o: src/WenOOF/abstract_objects/wenoof_weights_object.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_base_object.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_interpolator_object.o: src/WenOOF/abstract_objects/wenoof_interpolator_object.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_base_object.o \
 	$(DOBJ)wenoof_interpolations_object.o \
 	$(DOBJ)wenoof_weights_object.o
@@ -64,19 +64,19 @@ $(DOBJ)wenoof_interpolator_object.o: src/WenOOF/abstract_objects/wenoof_interpol
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_interpolations_object.o: src/WenOOF/abstract_objects/wenoof_interpolations_object.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_base_object.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_kappa_object.o: src/WenOOF/abstract_objects/wenoof_kappa_object.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_base_object.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_alpha_rec_m.o: src/WenOOF/concrete_objects/wenoof_alpha_rec_m.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_alpha_object.o \
 	$(DOBJ)wenoof_alpha_rec_js.o \
 	$(DOBJ)wenoof_alpha_rec_z.o \
@@ -85,7 +85,7 @@ $(DOBJ)wenoof_alpha_rec_m.o: src/WenOOF/concrete_objects/wenoof_alpha_rec_m.f90 
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_weights_int_js.o: src/WenOOF/concrete_objects/wenoof_weights_int_js.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_alpha_factory.o \
 	$(DOBJ)wenoof_alpha_object.o \
 	$(DOBJ)wenoof_base_object.o \
@@ -99,28 +99,28 @@ $(DOBJ)wenoof_weights_int_js.o: src/WenOOF/concrete_objects/wenoof_weights_int_j
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_interpolations_int_js.o: src/WenOOF/concrete_objects/wenoof_interpolations_int_js.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_base_object.o \
 	$(DOBJ)wenoof_interpolations_object.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_beta_rec_js.o: src/WenOOF/concrete_objects/wenoof_beta_rec_js.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_base_object.o \
 	$(DOBJ)wenoof_beta_object.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_alpha_rec_js.o: src/WenOOF/concrete_objects/wenoof_alpha_rec_js.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_alpha_object.o \
 	$(DOBJ)wenoof_base_object.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_reconstructor_js.o: src/WenOOF/concrete_objects/wenoof_reconstructor_js.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_base_object.o \
 	$(DOBJ)wenoof_interpolations_factory.o \
 	$(DOBJ)wenoof_interpolations_object.o \
@@ -131,14 +131,14 @@ $(DOBJ)wenoof_reconstructor_js.o: src/WenOOF/concrete_objects/wenoof_reconstruct
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_kappa_rec_js.o: src/WenOOF/concrete_objects/wenoof_kappa_rec_js.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_base_object.o \
 	$(DOBJ)wenoof_kappa_object.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_alpha_int_m.o: src/WenOOF/concrete_objects/wenoof_alpha_int_m.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_alpha_object.o \
 	$(DOBJ)wenoof_alpha_rec_js.o \
 	$(DOBJ)wenoof_alpha_rec_z.o \
@@ -147,7 +147,7 @@ $(DOBJ)wenoof_alpha_int_m.o: src/WenOOF/concrete_objects/wenoof_alpha_int_m.f90 
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_weights_rec_js.o: src/WenOOF/concrete_objects/wenoof_weights_rec_js.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_alpha_factory.o \
 	$(DOBJ)wenoof_alpha_object.o \
 	$(DOBJ)wenoof_base_object.o \
@@ -161,28 +161,28 @@ $(DOBJ)wenoof_weights_rec_js.o: src/WenOOF/concrete_objects/wenoof_weights_rec_j
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_alpha_rec_z.o: src/WenOOF/concrete_objects/wenoof_alpha_rec_z.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_alpha_object.o \
 	$(DOBJ)wenoof_base_object.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_interpolations_rec_js.o: src/WenOOF/concrete_objects/wenoof_interpolations_rec_js.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_base_object.o \
 	$(DOBJ)wenoof_interpolations_object.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_alpha_int_z.o: src/WenOOF/concrete_objects/wenoof_alpha_int_z.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_alpha_object.o \
 	$(DOBJ)wenoof_base_object.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_interpolator_js.o: src/WenOOF/concrete_objects/wenoof_interpolator_js.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_base_object.o \
 	$(DOBJ)wenoof_interpolations_factory.o \
 	$(DOBJ)wenoof_interpolations_object.o \
@@ -193,7 +193,7 @@ $(DOBJ)wenoof_interpolator_js.o: src/WenOOF/concrete_objects/wenoof_interpolator
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_kappa_int_js.o: src/WenOOF/concrete_objects/wenoof_kappa_int_js.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_base_object.o \
 	$(DOBJ)wenoof_interpolations_factory.o \
 	$(DOBJ)wenoof_interpolations_object.o \
@@ -203,21 +203,21 @@ $(DOBJ)wenoof_kappa_int_js.o: src/WenOOF/concrete_objects/wenoof_kappa_int_js.f9
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_beta_int_js.o: src/WenOOF/concrete_objects/wenoof_beta_int_js.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_base_object.o \
 	$(DOBJ)wenoof_beta_object.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_alpha_int_js.o: src/WenOOF/concrete_objects/wenoof_alpha_int_js.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_alpha_object.o \
 	$(DOBJ)wenoof_base_object.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_kappa_factory.o: src/WenOOF/factories/wenoof_kappa_factory.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_interpolations_object.o \
 	$(DOBJ)wenoof_kappa_object.o \
 	$(DOBJ)wenoof_kappa_rec_js.o \
@@ -226,7 +226,7 @@ $(DOBJ)wenoof_kappa_factory.o: src/WenOOF/factories/wenoof_kappa_factory.f90 \
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_weights_factory.o: src/WenOOF/factories/wenoof_weights_factory.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_alpha_object.o \
 	$(DOBJ)wenoof_beta_object.o \
 	$(DOBJ)wenoof_kappa_object.o \
@@ -237,7 +237,7 @@ $(DOBJ)wenoof_weights_factory.o: src/WenOOF/factories/wenoof_weights_factory.f90
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_interpolator_factory.o: src/WenOOF/factories/wenoof_interpolator_factory.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_interpolations_object.o \
 	$(DOBJ)wenoof_interpolator_object.o \
 	$(DOBJ)wenoof_interpolator_js.o \
@@ -247,7 +247,7 @@ $(DOBJ)wenoof_interpolator_factory.o: src/WenOOF/factories/wenoof_interpolator_f
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_interpolations_factory.o: src/WenOOF/factories/wenoof_interpolations_factory.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_interpolations_object.o \
 	$(DOBJ)wenoof_interpolations_rec_js.o \
 	$(DOBJ)wenoof_interpolations_int_js.o
@@ -255,7 +255,7 @@ $(DOBJ)wenoof_interpolations_factory.o: src/WenOOF/factories/wenoof_interpolatio
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_objects_factory.o: src/WenOOF/factories/wenoof_objects_factory.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_alpha_factory.o \
 	$(DOBJ)wenoof_alpha_object.o \
 	$(DOBJ)wenoof_beta_factory.o \
@@ -272,7 +272,7 @@ $(DOBJ)wenoof_objects_factory.o: src/WenOOF/factories/wenoof_objects_factory.f90
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_alpha_factory.o: src/WenOOF/factories/wenoof_alpha_factory.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_alpha_object.o \
 	$(DOBJ)wenoof_alpha_int_js.o \
 	$(DOBJ)wenoof_alpha_int_m.o \
@@ -284,34 +284,17 @@ $(DOBJ)wenoof_alpha_factory.o: src/WenOOF/factories/wenoof_alpha_factory.f90 \
 	@$(FC) $(OPTSC) $< -o $@
 
 $(DOBJ)wenoof_beta_factory.o: src/WenOOF/factories/wenoof_beta_factory.f90 \
-	$(DOBJ)penf.o \
+	$(DEXE)libpenf.a \
 	$(DOBJ)wenoof_beta_object.o \
 	$(DOBJ)wenoof_beta_rec_js.o \
 	$(DOBJ)wenoof_beta_int_js.o
 	@echo $(COTEXT)
 	@$(FC) $(OPTSC) $< -o $@
 
-$(DOBJ)penf.o: src/PENF/penf.F90 \
-	$(DOBJ)penf_global_parameters_variables.o \
-	$(DOBJ)penf_b_size.o \
-	$(DOBJ)penf_stringify.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
+.NOTPARALLEL: $(DEXE)libpenf.a
 
-$(DOBJ)penf_global_parameters_variables.o: src/PENF/penf_global_parameters_variables.F90
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
-
-$(DOBJ)penf_b_size.o: src/PENF/penf_b_size.F90 \
-	$(DOBJ)penf_global_parameters_variables.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
-
-$(DOBJ)penf_stringify.o: src/PENF/penf_stringify.F90 \
-	$(DOBJ)penf_b_size.o \
-	$(DOBJ)penf_global_parameters_variables.o
-	@echo $(COTEXT)
-	@$(FC) $(OPTSC) $< -o $@
+$(DEXE)libpenf.a:
+	@$(MAKE) -f makefile.penf
 
 #phony auxiliary rules
 .PHONY : $(MKDIRS)
